# msrpc-mingw

./: .gitignore  README  client.c  hello.acf  msrpc-glib2-1.0.pc.in  msrpc-mingw-1.0.pc.in  msrpc.py  server.c  wscript
m4macros/: msrpc-mingw-1.0.m4
src/: msrpc-glib2.c  msrpc-glib2.h  msrpc-mingw.c  msrpc-mingw.h  rpctester.c
tests/: rpctester.c  wscript
tests/async/: wscript
tests/async/src/: async.acf  async.idl  client.c  server.c
tests/autotools/: Makefile.am  configure.ac
tests/autotools/src/: client.c  server.c
tests/basic/: Makefile.am
tests/basic/src/: hello.idl  server.c
tests/complex-types/: wscript
tests/complex-types/src/: client.c  complex-types.acf  complex-types.idl  server.c
tests/errors/: wscript
tests/errors/src/: errors.c  hello.acf
tests/per-user/: wscript
tests/per-user/src/: client.c  peruser.acf  peruser.idl  rogue-client.c  server.c
tests/vala/: wscript
tests/vala/src/: client.vala  server.vala  vala-interface.vapi  vala.acf  vala.idl
vapi/: msrpc-1.0.vapi  rpc-1.0.vapi
